--- a/online-portfolio/style.css
+++ b/online-portfolio/style.css
@@ -10,6 +10,7 @@
         }
         img {
         border: 7px solid black;
+        margin-left: 550px;
         }
         footer {
                text-align: center;
@@ -17,6 +18,7 @@
         .test {
            width: 90%;
            margin-left: 5%;
-           margin-top: 100px;
+           margin-top: 30px;
+           margin-left: 30px;
         }
     </style>
