--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
   img {
     border: 7px solid black;
-    margin-left: 100px; /* Optional: consider centering with flexbox instead */
+    margin-left: 500px; /* Optional: consider centering with flexbox instead */
   }
 
   footer {
@@ -25,4 +25,12 @@
     margin-left: 5%;
     margin-top: 30px;
   }
+
+ #info {
+   display: flex;
+   gap: 60px;
+   padding: 10px;
+    margin-left:20%;
+ }
+
 </style>
